# EmbeddedWebServer

./: .gitignore  CMakeLists.txt  main.c  web_files.h
lib/: CMakeLists.txt
lib/W5500/: CMakeLists.txt  W5500.c  W5500.h
webFiles/: about_me.html  about_this_site.html  embedFiles.sh  four_o_four.html  index.html  post_template.html
